Tambah sql untuk database makanan dan minuman tambah ontop mappin(query)

--- a/ontologikantin.properties
+++ b/ontologikantin.properties
@@ -1,6 +1,6 @@
-#Tue Nov 07 21:27:33 ICT 2017
-jdbc.url=
-jdbc.driver=
+#Tue Nov 07 22:51:23 ICT 2017
+jdbc.url=jdbc\:h2\:tcp\://localhost/~/ontologikantin
+jdbc.driver=org.h2.Driver
 jdbc.user=
-jdbc.name=6f6cc1f7-2d0f-48f7-8da8-db31bab7c644
+jdbc.name=6894f532-0684-4099-8cfd-03beb2d7b6e1
 jdbc.password=
